# robosar_controller

./: CMakeLists.txt  README.md  package.xml
action/: OrchestratorController.action  PurePursuit.action  RobosarController.action
cfg/: PurePursuit.cfg
include/: Vector2.h  controller_action_server.hpp  lazy_traffic_agent.hpp  lazy_traffic_controller.hpp  lazy_traffic_rvo.hpp  lg_action_server.hpp  orchestrator_action_server.hpp  reciprocal_velocity_obstacle.hpp  traffic_controller.hpp
src/: lazy_traffic_agent.cpp  lazy_traffic_controller.cpp  ltc_head_on_collision_test.cpp  ltc_static_obstacles_test.cpp  reciprocal_velocity_obstacle.cpp  robosar_controller_client.cpp  robosar_controller_node.cpp  robosar_pure_pursuit_client.cpp  robosar_pure_pursuit_node.cpp  traffic_controller.cpp  traffic_controller_node.cpp
test/: rvo_compute_velocity_test.cpp  simple_test.cpp  static_collision_test.cpp  time_to_collision_test.cpp
